[package]
name = "websocket"
description = "a small test app to experiment with websockets using tungstenite crate"
version = "0.1.0"
authors = ["Andy Bright <abright@users.noreply.github.com>"]
edition = "2018"

[dependencies]
native-tls = "0.2.4"
thiserror = "1.0.20"
tungstenite = { version = "0.11.1", features = ["native-tls"] }
